--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </section>
-      <section class="mt-[5.75rem] md:px-10">
+      <section class="mt-[5.75rem] md:px-10 xl:mt-[8.25rem]">
         <div class="max-w-container mx-auto flex flex-col gap-[3.375rem] xl:flex-row xl:gap-0 xl:justify-between">
           <div class="text-center px-[1.375rem] xl:px-0 xl:text-left xl:max-w-[445px]">
             <h2 class="text-h4 leading-h4 tracking-[-0.71px] font-bold text-dark-blue xl:text-h2 xl:leading-[3rem]">What’s different about Manage?</h2>
