--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
       </section>
     </main>
-    <footer class="bg-dark px-6 pt-[3.125rem] pb-[1.875rem] xl:px-10">
+    <footer class="bg-dark px-6 pt-[3.125rem] pb-[1.875rem] xl:px-10 xl:py-[3.875rem]">
       <div class="max-w-container mx-auto flex flex-col items-center xl:flex-row">
         <div class="self-stretch flex flex-col justify-between text-sm leading-sm xl:order-3 xl:ml-auto">
           <form id="form">
@@ -170,7 +170,7 @@
               <i class="fa-brands fa-instagram"></i>
             </a>
           </div>
-          <img src="/logo-white.svg" alt="Logo" />
+          <img src="/logo-white.svg" class="xl:w-[147px]" alt="Logo" />
         </div>
         <p class="mt-[3.125rem] text-sm leading-[1.1875rem] xl:hidden">Copyright 2020. All Rights Reserved</p>
       </div>
