--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
             <div>
               <div class="flex items-center bg-cream rounded-l-xl font-bold leading-[1.4375rem] xl:bg-transparent">
                 <div class="px-6 py-2 bg-orange rounded-xl text-white">01</div>
-                <h3 class="text-dark-blue ml-4">Track company-wide progress</h3>
+                <h3 class="text-dark-blue ml-4 xl:ml-7">Track company-wide progress</h3>
               </div>
-              <p class="mt-[0.5625rem] text-[0.875rem] xl:pl-[5.25rem] xl:text-lg">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
+              <p class="mt-[0.5625rem] text-[0.875rem] xl:pl-24 xl:text-lg">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
             </div>
             <div>
               <div class="flex items-center bg-cream rounded-l-xl font-bold leading-[1.4375rem] xl:bg-transparent">
                 <div class="px-6 py-2 bg-orange rounded-xl text-white">02</div>
-                <h3 class="text-dark-blue ml-4">Advanced built-in reports</h3>
+                <h3 class="text-dark-blue ml-4 xl:ml-7">Advanced built-in reports</h3>
               </div>
-              <p class="mt-[0.5625rem] text-[0.875rem] xl:pl-[5.25rem] xl:text-lg">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
+              <p class="mt-[0.5625rem] text-[0.875rem] xl:pl-24 xl:text-lg">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
             </div>
             <div>
               <div class="flex items-center bg-cream rounded-l-xl font-bold leading-[1.4375rem] xl:bg-transparent">
                 <div class="px-6 py-2 bg-orange rounded-xl text-white">03</div>
-                <h3 class="text-dark-blue ml-4">Everything you need in one place</h3>
+                <h3 class="text-dark-blue ml-4 xl:ml-7">Everything you need in one place</h3>
               </div>
-              <p class="mt-[0.5625rem] text-[0.875rem] xl:pl-[5.25rem] xl:text-lg">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
+              <p class="mt-[0.5625rem] text-[0.875rem] xl:pl-24 xl:text-lg">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
             </div>
           </div>
         </div>
